# shareframe

./: .dockerignore  .gitignore  LICENSE  README.md  app-command-examples.txt  app-command.sh  docker-compose.dev.yml  docker-compose.prod.local.yml  requirements.txt
backend/: .dockerignore  Dockerfile.dev  Dockerfile.prod  pyproject.toml  requirements.txt
backend/appEmail/: djoserEmailConfig.py  tasks.py
backend/authentication/: jwt.py  signals.py  urls.py  views.py
backend/changelogs/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/changelogs/migrations/: 0001_initial.py  0002_changelogimage.py  (+2 more)
backend/config/: asgi.py  celery.py  celeryconfig.py  settings.py  throttles.py  urls.py  views.py
backend/dashboard/: urls.py  views.py
backend/frame_updates/: admin.py  apps.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/frame_ws/: admin.py  apps.py  consumers.py  models.py  routing.py  signals.py
backend/frames/: admin.py  apps.py  auth.py  close_codes.py  consumers.py  keys.py  models.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/friendships/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/images/: admin.py  checksum.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/securePayload/: securePayload.py
backend/sent_images/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/user_accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/user_core/: admin.py  blacklist.py  choices.py  forms.py  models.py  serializers.py  tasks.py  urls.py  validation.py  views.py
backend/utils/: endpoint_request_cooldown.py
board/app/: app.py  dashboard_main.py  delete.test  files_to_backup.json  files_to_delete.json  heartbeat.py  main.py  pyproject.toml  requirements.txt  update.py  updater.py
(+458 files in other folders)
