[project]
name = "shareframe-backend"
version = "0"
requires-python = ">=3.13"
dependencies = [
    "Django>=5.1.15,<5.2",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.1",
    "drf-spectacular>=0.28.0",
    "channels>=4.2.0",
    "channels-redis>=4.2.1",
    "daphne>=4.1.2",
    "django-celery-beat>=2.7.0",
    "django-celery-results>=2.5.1",
    "django-cors-headers>=4.6.0",
    "django-otp>=1.6.1",
    "django-redis>=5.4.0",
    "celery>=5.4.0",
    "redis>=5.2.1,<6",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pillow>=12.2.0",
    "cryptography>=46.0.6",
    "Levenshtein>=0.27.1",
    "semver>=3.0.4",
]

# Floor transitive packages flagged by Dependabot to their patched versions.
# Twisted intentionally omitted: only a pre-release (26.4.0rc2) fixes the
# twisted.names DNS DoS, which is unused here (Twisted is pulled via
# daphne/channels for HTTP/WS only). That alert is dismissed as not-applicable.
[tool.uv]
package = false
constraint-dependencies = [
    "urllib3>=2.7.0",
    "requests>=2.33.0",
    "idna>=3.15",
    "h2>=4.3.0",
    "sqlparse>=0.5.4",
    "Markdown>=3.8.1",
    "PyJWT>=2.12.0",
    "pyasn1>=0.6.3",
    "pyOpenSSL>=26.0.0",
]
