[project]
name = "shareframe"
version = "1.0.0"
description = "shareframe applicationn"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
spidev = "3.5"
gpiozero = "2.0.1"
python-dotenv = "1.0.1"
asyncio = "3.4.3"
websockets = "14.1"
backoff = "2.2.1"
requests = "2.28.1"
gunicorn = "23.0.0"
flask = "2.2.2"
flask-cors = "5.0.1"
netifaces = "0.11.0"
werkzeug = "2.2.3"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
